# android_sensor_sample

./: .gitignore  settings.gradle
app/: build.gradle
app/cmake/: CMakeLists.txt
app/src/androidTest/java/com/example/android_sensor_sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  Bridge.cpp  CollectionManager.cpp  CollectionManager.h  Definition.h  Information.cpp  Information.h  Log.h  Sensor.cpp  Sensor.h  SensorEvent.cpp  SensorEvent.h  SensorManager.cpp  SensorManager.h
app/src/main/cpp/func/: Callback.h
app/src/main/cpp/jni/: CollectionManager.cpp  CollectionManager.h  Sensor.cpp  Sensor.h  SensorManager.cpp  SensorManager.h
app/src/main/cpp/jni/sensor/: Accelerometer.cpp  Accelerometer.h  Default.cpp  Default.h  Gyroscope.cpp  Gyroscope.h  MagneticField.cpp  MagneticField.h
app/src/main/cpp/make/: SensorEvent.h
app/src/main/cpp/sensor/: Accelerometer.cpp  Accelerometer.h  Default.cpp  Default.h  Gyroscope.cpp  Gyroscope.h  MagneticField.cpp  MagneticField.h
app/src/main/cpp/sensor_event/: Accelerometer.cpp  Accelerometer.h  Default.cpp  Default.h  Gyroscope.cpp  Gyroscope.h  MagneticField.cpp  MagneticField.h
app/src/main/java/com/example/android_sensor_sample/: CollectionManager.kt  MainActivity.kt  Native.kt  NumberDialog.kt  Sensor.kt  SensorDetail.kt  SensorEvent.kt  SensorManager.kt  Storage.kt
app/src/main/java/com/example/android_sensor_sample/sensor/: Accelerometer.kt
app/src/main/res/drawable/: ic_stop.xml  number_dialog.xml
app/src/main/res/layout/: accelerometer.xml  activity_main.xml  number_dialog.xml  sensor.xml  sensor_details.xml  sensor_event.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/android_sensor_sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
